fix footer not sticking to bottom on smaller screens

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -23,8 +23,8 @@ $carousel-transition-duration: 0.3s;
 
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
-html, body {
-  height: 100%;
+html, body, #root {
+  min-height: 100vh;
 }
 #root {
   display: flex;
